--- a/_posts/2024-07-03-שני-כלים-שימושיים-לטרמינל.markdown
+++ b/_posts/2024-07-03-שני-כלים-שימושיים-לטרמינל.markdown
@@ -71,6 +71,6 @@ sudo dnf install micro
 
 ## מקורות:
 
-- https://github.com/sharkdp/bat
+- [bat](https://github.com/sharkdp/bat)
 
-- https://micro-editor.github.io/
+- [micro editor](https://micro-editor.github.io)
