edit post: tools for terminal

--- a/_posts/2024-07-03-שני-כלים-שימושיים-לטרמינל.markdown
+++ b/_posts/2024-07-03-שני-כלים-שימושיים-לטרמינל.markdown
@@ -6,11 +6,11 @@ date: 2024-07-03
 שני תוכנות שמקלות על עריכת קבצים בטרמינל, ועל קריאת קבצים בטרמינל.
 
 # קריאת קבצים - `bat`
-במקום לקרוא קבצים בצורה כזאת:
+במקום לקרוא קבצים בצורה כזאת, דהיינו עם קורא הקבצית המסורתי `nano`:
 
 ![cat](/assets/cat.png)
 
-ניתן לקרוא קבצים כך:
+ניתן לקרוא קבצים כך, עם קורא קבצים מעניין ומגניב במיוחד:
 
 ![bat](/assets/bat.png)
 
@@ -25,7 +25,7 @@ date: 2024-07-03
 
 ![nano](/assets/nano.png)
 
-ניתן לערוך קבצים כך:
+ניתן לערוך קבצים כך, באמצעות עורך הטקסט `micro`:
 
 ![micro](/assets/micro.png)
 
