--- a/_posts/2024-07-03-שני-כלים-שימושיים-לטרמינל.markdown
+++ b/_posts/2024-07-03-שני-כלים-שימושיים-לטרמינל.markdown
@@ -6,7 +6,7 @@ date: 2024-07-03
 שני תוכנות שמקלות על עריכת קבצים בטרמינל, ועל קריאת קבצים בטרמינל.
 
 # קריאת קבצים - `bat`
-במקום לקרוא קבצים בצורה כזאת, דהיינו עם קורא הקבצית המסורתי `nano`:
+במקום לקרוא קבצים בצורה כזאת, דהיינו עם קורא הקבצית המסורתי `cat`:
 
 ![cat](/assets/cat.png)
 
