edit title in update post

--- a/_posts/2024-07-29-אוף-עדכונים.markdown
+++ b/_posts/2024-07-29-אוף-עדכונים.markdown
@@ -4,7 +4,7 @@ title: אוף, עדכונים...
 date: 2024-07-09
 ---
 
-# אוף! עדכונים...
+# כיצד לשמור על המערכת שלנו מעודכנת
 הדבר החשוב בניהול מערכות ממוחשבות הוא תחזוקה. בין שלל משימות התחזוקה נמצאת גם משימת עדכון התוכנה. בפוסט זה אכתוב כיצד להקל במשימה זו, שאיך לומר בעדינות, להרבה אין סבלנות אליה.
 
 בפוסט אשתף בדרך שאני פועל על מנת לבצע עדכונים שוטפים בכל יום. אני משתמש בשני כלים: סקריפט, ומשימה מתוזמנת שמריצה את הסקריפט לבדיקת עדכונים. ולאחר מכן עדכון החבילות בפועל באופן ידני.
