edit link in update post

--- a/_posts/2024-07-29-אוף-עדכונים.markdown
+++ b/_posts/2024-07-29-אוף-עדכונים.markdown
@@ -82,7 +82,7 @@ crontab -e
 
 במקרה שלנו, אנו כתבנו בכוכבית השנייה 11, ובכוכבית הראשונה 45. המשמעות: בשעה 11, ודקה 45. ומכיוון שלא ציינו את היום בחודש, החודש, והיום בשבוע - המשימה תרוץ בכל יום ויום.
 
-כדי לסמלץ את הנושא ניתן להיעזר באתר https://crontab.guru/ בו ניתן "לקבוע זמן" לביצוע המשימה, ולקבל פידבק מתי זה יקרה. הנה תמונה של האתר:
+כדי לסמלץ את הנושא ניתן להיעזר באתר [crontab.guru](https://crontab.guru/) בו ניתן "לקבוע זמן" לביצוע המשימה, ולקבל פידבק מתי זה יקרה. הנה תמונה של האתר:
 
 ![Crontab.guru](/assets/Crontab.guru.png)
 
