--- a/_posts/2024-06-23-שידרוג-הטרמינל,-חלק-ראשון:-התוכנה.markdown
+++ b/_posts/2024-06-23-שידרוג-הטרמינל,-חלק-ראשון:-התוכנה.markdown
@@ -31,8 +31,7 @@ date: 2024-06-23
 ~/.local/share/fonts
 ```
 
->[!note]
-
+>[!NOTE]
 >אם לא קיימת תיקיית `fonts` - צרו אותה.
 
 לאחר שהעתקתם את תיקיית הפונטים תוכלו לראות שנוספו לכם ברשימת הפונטים גם את משפחת `JetBrains mono`.
