--- a/_posts/2024-08-01-כינויים-לפקודות-(alias).markdown
+++ b/_posts/2024-08-01-כינויים-לפקודות-(alias).markdown
@@ -66,11 +66,11 @@ alias cm='cat ~/my_file'
 
 כאשר `cm` הוא קיצור של cat ו- my_file.
 
->[!הערה]
->כשיוצרים כינוי כדאי לשים לב לשני דברים:
->
->* הכינוי שבחרתם הוא לא פקודה קיימת, 
->* הכינוי יהיה קליט וזכור לכם.
+*הערה!*
+
+###### כשיוצרים כינוי כדאי לשים לב לשני דברים:
+* הכינוי שבחרתם הוא לא פקודה קיימת, 
+* הכינוי יהיה קליט וזכור לכם.
 
 או אם אני זקוק לערוך את הקובץ בתדירות גבוהה - אכתוב כינוי שיפתח אותו בעורך הטקסט `nano` :
 
