--- a/_posts/2024-08-01-כינויים-לפקודות-(alias).markdown
+++ b/_posts/2024-08-01-כינויים-לפקודות-(alias).markdown
@@ -68,7 +68,7 @@ alias cm='cat ~/my_file'
 
 *הערה!*
 
-###### כשיוצרים כינוי כדאי לשים לב לשני דברים:
+כשיוצרים כינוי כדאי לשים לב לשני דברים:
 * הכינוי שבחרתם הוא לא פקודה קיימת, 
 * הכינוי יהיה קליט וזכור לכם.
 
