edit the home page!

--- a/_posts/2024-06-23-שידרוג-הטרמינל,-חלק-ראשון:-התוכנה.markdown
+++ b/_posts/2024-06-23-שידרוג-הטרמינל,-חלק-ראשון:-התוכנה.markdown
@@ -4,8 +4,9 @@ title: שידרוג הטרמינל, חלק ראשון - התוכנה
 date: 2024-06-23
 ---
 
-# כיצד ליצור סביבת עבודה נוחה ופרודוקטיבית בטרמינל
-כאנשי לינוקס, אנו עובדים חלק ניכר מהזמן בטרמינל, "מלכלכים את הידיים" מה שנקרא. מגיע לנו טרמינל יפה, מזמין ונוח לעבוד! אז החלטתי לשתף באופן שבו בחרתי להכין את סביבת העבודה שלי בטרמינל. אולי זה יראה קצת יותר מדי מסובך, ויהיו שישאלו "האם המאמץ שווה? זה יותר יעזור לי? הרי במילא **אין גרפי** בלינוקס?"
+כאנשי לינוקס, אנו עובדים חלק ניכר מהזמן בטרמינל, "מלכלכים את הידיים" מה שנקרא. כיצד נוכל ליצור סביבת עבודה נוחה ופרודוקטיבית בטרמינל? וגם: כיצד להוסיף קצת צבע ועיצוב לטרמינל, שיהיה מזמין ונוח לעבוד? 
+
+אז החלטתי לשתף באופן שבו בחרתי להכין את סביבת העבודה שלי בטרמינל. אולי זה יראה קצת יותר מדי מסובך, ויהיו שישאלו "האם המאמץ שווה? זה יותר יעזור לי? הרי במילא **אין גרפי** בלינוקס?"
 
 אז התשובה: בהחלט! ניתן לשפר את הטרמינל באמצעות כמה צעדים וליהנות ממראה אלגנטי, השלמות קוד, קריאת קבצים באופן מדהים, לערוך קבצים בדיוק כמו שאתם רגילים לעורך טקסט גרפי, ועוד ה-מ-ו-ן אופציות. אז נתחיל.
 
