--- a/_posts/2024-07-03-שני-כלים-שימושיים-לטרמינל.markdown
+++ b/_posts/2024-07-03-שני-כלים-שימושיים-לטרמינל.markdown
@@ -3,7 +3,7 @@ layout: post
 title: שני כלים שימושיים לטרמינל
 date: 2024-07-03
 ---
-שני תוכנות שמקלות על עריכת קבצים בטרמינל, ועל קריאת קבצים בטרמינל.
+שני תוכנות שמקלות על עריכת קבצים בטרמינל, כתחליף קל משקל, פשוט, וידידותי למשתמש הממוצע, ועל קריאת קבצים בטרמינל, כתחליף לפקודת `cat` או `more` .
 
 # קריאת קבצים - `bat`
 במקום לקרוא קבצים בצורה כזאת, דהיינו עם קורא הקבצית המסורתי `cat`:
