--- a/_posts/2024-07-05-שדרוג-הטרמינל-חלק שני:-oh-my-zsh.markdown
+++ b/_posts/2024-07-05-שדרוג-הטרמינל-חלק שני:-oh-my-zsh.markdown
@@ -4,8 +4,9 @@ title: שדרוג הטרמינל חלק שני - oh my zsh
 date: 2024-07-05
 ---
 
-# מה זה oh my zsh?
-השפה הדיפולטיבית ברוב הפצות לינוקס היא `bash`. ישנם עוד שפות שמותקנות מראש בהפצות לינוקס סטנדרטיות. חלקן ישנות, וחלקן ישנות יותר. בפוסט זה נכיר שפה חדשה למעטפת של לינוקס. היא נקראת `zsh` (תוכלו לקרוא עליה [כאן](https://zsh.org)). אך לא לשם התקנת עוד שפת מעטפת התכנסנו. העוצמה של `zsh` (נהגה: זי של) היא בהתקנת `ohmyzsh` [פרויקט בקוד פתוח](https://ohmyz.sh/) שמעניק גישה להמון תוספים, כלים, וערכות נושא עבור הטרמינל. אז בפוסט הנוכחי אכתוב את ההתחלה של עבודה עם `ohmyzsh`.
+השפה הדיפולטיבית ברוב הפצות לינוקס היא `bash`. ישנם עוד שפות שמותקנות מראש בהפצות לינוקס סטנדרטיות. חלקן ישנות, וחלקן ישנות יותר. בפוסט זה נכיר שפה חדשה למעטפת של לינוקס. 
+
+השפה נקראת `zsh` (תוכלו לקרוא עליה [כאן](https://zsh.org)). אך לא לשם התקנת עוד שפת מעטפת התכנסנו. העוצמה של `zsh` (נהגה: זי של) היא בהתקנת `oh my zsh` [פרויקט בקוד פתוח](https://ohmyz.sh/) שמעניק גישה להמון תוספים, כלים, וערכות נושא עבור הטרמינל. אז בפוסט הנוכחי אכתוב את ההתחלה של עבודה עם `oh my zsh`.
 
 ## הבסיס: `zsh`
 שלב ראשון הוא התקנת מעטפת `zsh`. נפתח את הטרמינל ונקליד את הפקודה הבאה:
