update vim command

--- a/_posts/2024-08-28-מבט-כללי-על-העורך.markdown
+++ b/_posts/2024-08-28-מבט-כללי-על-העורך.markdown
@@ -52,7 +52,7 @@ date: 2024-08-28
 לאחר המעבר למצב פקודה יש להזין קלט בפורמט הבא:
 
 ```vi
-%s/find/replace/g
+:%s/find/replace/g
 ```
 
 במקום `find` מזינים את הטקסט הקיים, ובמקום `replace` מזינים את הטקסט החדש.
