Edit Post: DNF vs APT

--- a/_posts/2025-01-03-פקודות-DNF-מול-פקודות-APT.markdown
+++ b/_posts/2025-01-03-פקודות-DNF-מול-פקודות-APT.markdown
@@ -3,9 +3,10 @@ layout: post
 title: פקודות DNF מול פקודות APT
 date: 2025-01-03
 ---
-# השוואת פקודות מנהלי החבילות 
-ניהול חבילות פדורה הוא באמצעות תוכנית DNF. להלן השוואה בין הפקודות של DNF לבין הפקודות של APT של מנהל החבילות של אובנטו:
 
+ניהול חבילות פדורה הוא באמצעות תוכנת DNF, וניהול חבילות אובנטו הוא באמצעות APT. להלן השוואה בין הפקודות של DNF לבין הפקודות של APT.
+
+# השוואת פקודות מנהלי החבילות 
 
 | APT command      | DNF command        | הסבר                       |
 | ---------------- | ------------------ | -------------------------- |
@@ -16,9 +17,8 @@ date: 2025-01-03
 | `apt autoremove` | `dnf autoremove`   | מחיקת חבילות מיותרות       |
 | `apt search`     | `dnf search`       | חיפוש אחר חבילות תוכנה     |
 
-### חשוב:
+# חשוב:
 גם לאובונטו וגם לפדורה יש הפצות שנגזרות מהן, ולכן גם בנגזרות אובונטו ונגזרות פדורה גם בהן מנהל החבילות הוא כמו שבמקור.
 
->[!תיעוד המקור נמצא בקישור:]
->https://docs.fedoraproject.org/en-US/quick-docs/dnf-vs-apt/
+[Source](https://docs.fedoraproject.org/en-US/quick-docs/dnf-vs-apt/)
 
