edited: gnu stow

--- a/_posts/2025-07-11-stow.md
+++ b/_posts/2025-07-11-stow.md
@@ -139,3 +139,7 @@ Kitty (טרמינל מהיר ויפה), Wezterm (עוד טרמינל...).
 
 זה העיקרון. כך תוכלו לעשות עבור כל תוכנה שברצונכם לשמור ולנהל את קבצי
 התצורה שלהן במקום אחד.
+
+## קבצי הדוטפיילס שלי
+
+תוכלו למצוא את קבצי הדוטפיילס של בגיטהאב: [Nachmen-Kurtz/dotfiles: Dotfiles.](https://github.com/Nachmen-Kurtz/dotfiles)
